--- a/Scraping_Torah.ipynb
+++ b/Scraping_Torah.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,20 @@
     "                  'https://www.jewishvirtuallibrary.org/book-of-zephaniah',\n",
     "                  'https://www.jewishvirtuallibrary.org/book-of-haggai',\n",
     "                  'https://www.jewishvirtuallibrary.org/book-of-zechariah',\n",
-    "                  'https://www.jewishvirtuallibrary.org/book-of-malachi']\n"
+    "                  'https://www.jewishvirtuallibrary.org/book-of-malachi']\n",
+    "writings_links = ['https://www.jewishvirtuallibrary.org/tehillim-psalms-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/mishlei-proverbs-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/iyov-job-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/shir-hashirim-song-of-songs-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/ruth-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/eichah-lamentations-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/kohelet-ecclesiastes-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/esther-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/daniel-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/ezra-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/nehemiah-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/divrei-hayamim-i-chronicles-1-full-text',\n",
+    "                 'https://www.jewishvirtuallibrary.org/divrei-hayamim-ii-chronicles-2-full-text']"
    ]
   },
   {
@@ -65,15 +78,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torah_pages = [loadPage(a) for a in torah_links]"
+    "torah_pages = [loadPage(a) for a in torah_links]\n",
+    "p1_pages = [loadPage(a) for a in prophets_I_links]\n",
+    "p2_pages= [loadPage(a) for a in prophets_II_links]\n",
+    "writing_pages= [loadPage(a) for a in writings_links]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -81,7 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torah_pages_soup = [BeautifulSoup(a, 'lxml') for a in torah_pages]"
+    "torah_pages_soup = [BeautifulSoup(a, 'lxml') for a in torah_pages]\n",
+    "p1_pages_soup = [BeautifulSoup(a, 'lxml') for a in p1_pages]\n",
+    "p2_pages_soup = [BeautifulSoup(a, 'lxml') for a in p2_pages]\n",
+    "writing_pages_soup = [BeautifulSoup(a, 'lxml') for a in writing_pages]"
    ]
   },
   {
@@ -90,7 +102,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books = [[p.text.split(\" \") for p in a.find_all('p')] for a in torah_pages_soup]\n",
+    "torah_books = [[p.text.split(\" \") for p in a.find_all('p')] for a in torah_pages_soup]\n",
+    "p1_books = [[p.text.split(\" \") for p in a.find_all('p')] for a in p1_pages_soup]\n",
+    "writing_books = [[p.text.split(\" \") for p in a.find_all('p')] for a in writing_pages_soup]\n",
+    "\n",
+    "books = torah_books#+p1_books\n",
     "\n",
     "indices = []\n",
     "book_index = 0\n",
@@ -112,8 +128,6 @@
    "outputs": [],
    "source": [
     "from nltk.tokenize import RegexpTokenizer\n",
-    "from nltk.stem.lancaster import LancasterStemmer\n",
-    "stemmer = LancasterStemmer()\n",
     "\n",
     "verse_tokenizer = RegexpTokenizer(\"[0-9]+:[0-9]+:[0-9]+[^:]+[^0-9:]\")\n",
     "\n",
@@ -149,18 +163,158 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorized = pd.DataFrame(chapters)\n",
-    "vectorized.to_csv('Torah_Chapters.csv')"
+    "pd.DataFrame(chapters).to_csv('Torah_Chapters.csv')\n",
+    "\n",
+    "pd.DataFrame(verses_minus_verses).to_csv('Torah_Verses.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(chapter_indices).to_csv('Chapter Indices.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4425"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(verse_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, thoughts.\n",
+    "I ideally want to label by verse. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(verses_minus_verses).to_csv('Torah_Verses.csv')"
+    "book = verse_indices[:, 0]\n",
+    "chapter = verse_indices[:, 1]\n",
+    "verse = verse_indices[:, 2]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c86e4345612a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mverse_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchapter\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"p\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchapter\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mverse\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"p\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchapter\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mverse\u001b[0m\u001b[0;34m>=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"y\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchapter\u001b[0m\u001b[0;34m>=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchapter\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0;36m35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"y\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "labels = np.array([\"\"]*len(verse_indices))\n",
+    "labels[(book==1)&(chapter==1)] = \"p\"\n",
+    "labels[(book==1)&(chapter==2)&(verse<4)] = \"p\"\n",
+    "labels[(book==1)&(chapter==2)&(verse>=4)] = \"y\"\n",
+    "labels[(book==1)&(chapter>=3)&(chapter<=35)] = \"y\"\n",
+    "labels[(book==1)&(chapter>=36)]=\"p\" #(unclear if this is accurate; there's ambiguity.)\n",
+    "\n",
+    "labels[(book==2)] = \"y\"\n",
+    "labels[(book==2)&(chapter>=25)&(chapter<=31)] = \"p\"\n",
+    "labels[(book==2)&(chapter>=35)&(chapter<=40)] = \"p\"\n",
+    "\n",
+    "labels[(book==3)]=\"p\"\n",
+    "\n",
+    "labels[(book==4)&(chapter>=1)&(chapter<=9)] = \"p\"\n",
+    "labels[(book==4)&(chapter==10)]='y'\n",
+    "labels[(book==4)&(chapter==10)&(verse<=28)] = \"p\"\n",
+    "labels[(book==4)&(chapter>=11)&(chapter<=14)]='y'\n",
+    "labels[(book==4)&(chapter>=15)&(chapter<=20)]='p'\n",
+    "labels[(book==4)&(chapter>=21)&(chapter<=24)]='y'\n",
+    "labels[(book==4)&(chapter>=25)&(chapter<=31)]='p'\n",
+    "labels[(book==4)&(chapter>=32)&(chapter<=32)]='y'\n",
+    "labels[(book==4)&(chapter>=33)&(chapter<=36)]='p'\n",
+    "labels[(book==5)]='d'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(labels).to_csv('Verse_Labels.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'p': 2089, 'y': 1675, 'd': 661})"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "Counter(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
